--- a/Leetcode/77组合.md
+++ b/Leetcode/77组合.md
@@ -1,11 +1,13 @@
 [Toc]
 题目链接：https://leetcode-cn.com/problems/combinations/
 
+
+
 ### 递归方法一（剪枝）
 
  剪枝的思路是当tmp_list现有长度和剩余可选元素个数之和小于目标值k时，一定无法得到一个结果。此时直接返回。
 
-**时间复杂度**：$O\left(\left(\begin{array}{l}n \\ k\end{array}\right) \times k\right)$。考察dfs方法执行了多少次，即tmp_list + [i]执行了多少次。总计$C(n, k)$个解，每个解需要执行k次。
+**时间复杂度**：![](https://latex.codecogs.com/svg.latex?%5Cinline%20O%5Cleft%28%5Cleft%28%5Cbegin%7Barray%7D%7Bl%7Dn%20%5C%5C%20k%5Cend%7Barray%7D%5Cright%29%20%5Ctimes%20k%5Cright%29)$O\left(\left(\begin{array}{l}n \\ k\end{array}\right) \times k\right)$。考察dfs方法执行了多少次，即tmp_list + [i]执行了多少次。总计$C(n, k)$个解，每个解需要执行k次。
 
 **空间复杂度**：$O(k)$。栈的深度最多为k层，tmp_list的长度最多为k。
 
