--- a/Leetcode/77组合.md
+++ b/Leetcode/77组合.md
@@ -1,14 +1,15 @@
-[Toc]
+- [ 递归方法一（剪枝）](#head1)
+- [ 递归方法二（数学公式）](#head2)
+- [ 非递归方法](#head3)
+- [ Python库方法](#head4)
+
+
+
 题目链接：https://leetcode-cn.com/problems/combinations/
 
-- [递归方法一（剪枝）](### 递归方法一（剪枝）)
-- [递归方法二（数学公式）](### 递归方法二（数学公式）)
-- [非递归方法](### 非递归方法)
-- [Python库方法](### Python库方法)
+### <span id="head1"> 递归方法一（剪枝）</span>
 
-### 递归方法一（剪枝）
-
- 剪枝的思路是当tmp_list现有长度和剩余可选元素个数之和小于目标值k时，一定无法得到一个结果。此时直接返回。
+剪枝的思路是当tmp_list现有长度和剩余可选元素个数之和小于目标值k时，一定无法得到一个结果。此时直接返回。
 
 **时间复杂度**：$O\left(\left(\begin{array}{l}n \\ k\end{array}\right) \times k\right)$。考察dfs方法执行了多少次，即tmp_list + [i]执行了多少次。总计$C(n, k)$个解，每个解需要执行k次。
 
@@ -30,7 +31,7 @@ class Solution:
         return res_list
 ```
 
-### 递归方法二（数学公式）
+### <span id="head2"> 递归方法二（数学公式）</span>
 
 排列组合有如下公式。则我们写出一个combine方法，反复调用自身，可得最后的结果。
 
@@ -59,7 +60,7 @@ class Solution:
 
 
 
-### 非递归方法
+### <span id="head3"> 非递归方法</span>
 
 非递归方法不是用栈去模拟递归的方法。这里借鉴[itertools.combinations](https://docs.python.org/3/library/itertools.html#itertools.combinations)的源码。整体的思路和递归方法一一样，只是使用模拟的方法将结果进行输出。
 
@@ -99,7 +100,7 @@ class Solution:
 
 一般地，如果要求我们对任意iterable对象，输出所有可能的组合。即转化为对其索引进行组合。按照索引输出结果即可。
 
-### Python库方法
+### <span id="head4"> Python库方法</span>
 
 ```python
 class Solution:
@@ -135,4 +136,3 @@ def combinations(iterable, r):
 **时间复杂度**：$O\left(\left(\begin{array}{l}n \\ k\end{array}\right) \times k\right)$。总共有$C(n, k)$个解。由上一个解生成下一个解。最多修改k个index值。
 
 **空间复杂度**：$O(n)$。pool大小为n，indices大小为k。
-
