--- a/Leetcode/112.路径总和.md
+++ b/Leetcode/112.路径总和.md
@@ -1,6 +1,6 @@
 **题目链接**：https://leetcode-cn.com/problems/path-sum/
 
-**解题思路**：
+**解题思路**：前序遍历可以获得root到当前节点的路径和。
 
 **时间复杂度**：$O(N)$。N是二叉树的节点个数。这是最差情况下的时间复杂度，要访问所有路径。但是题目是只要找到就返回，所以是回溯问题，当找到一条路径后，立刻返回。注意return的写法，or表达式，左边为True时就不需要访问右边了。
 
