--- a/Leetcode/437.路径总和Ⅲ.md
+++ b/Leetcode/437.路径总和Ⅲ.md
@@ -1,6 +1,6 @@
-题目链接：https://leetcode-cn.com/problems/path-sum-iii/
+**题目链接**：https://leetcode-cn.com/problems/path-sum-iii/
 
-思路：任意一条路径都是从上到下，不需要一定从root节点开始，也不需要一定从叶子节点结束。树的遍历方式，通常来说三种，前中后。通过前序遍历的方式我们可以获得root到达当前节点这条路径上的总和cursum。如果我们知道记录下这条路径上所以的前缀和。只要找到所有的cursum-target。那么就找到了和为target的路径。
+**解题思路**：任意一条路径都是从上到下，不需要一定从root节点开始，也不需要一定从叶子节点结束。树的遍历方式，通常来说三种，前中后。通过前序遍历的方式我们可以获得root到达当前节点这条路径上的总和cursum。如果我们知道记录下这条路径上所以的前缀和。只要找到所有的cursum-target。那么就找到了和为target的路径。
 
 如何理解前缀和，举例，10->5->3这条路径，10，10+5都是这条路径的前缀和。把从上到下的任意路径和问题转化为两条从root开始的路径和求差问题，如果知道如何求root到任意节点的路径和（前序），就更容易了。
 
