--- a/Leetcode/131.分割回文串.md
+++ b/Leetcode/131.分割回文串.md
@@ -4,7 +4,7 @@
 
 方法一：深度优先搜索，遍历每一种可能的情况，只有当前面的字符串为回文串时才继续往下搜索。当遍历到字符串末尾，说明前面分割的字符串都是回文串。加入res中返回。
 
-**时间复杂度**：$O(k*N*2^{N-1})$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。即求这种情况下dfs访问的次数。$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n)$，f(1)=1。每个结果需要进行回文判断，list的拼接，和最终结果的拷贝。都是$O(N)$的复杂度。k可以理解为3。list拼接的时间复杂度为$O(m+n)$，m和n分别是两个list的长度。
+**时间复杂度**：$O(k\times N \times 2^{N-1})$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。即求这种情况下dfs访问的次数。$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n)$，f(1)=1。每个结果需要进行回文判断，list的拼接，和最终结果的拷贝。都是$O(N)$的复杂度。k可以理解为3。list拼接的时间复杂度为$O(m+n)$，m和n分别是两个list的长度。
 
 **空间复杂度**：$O(N)$。临时结果part占用N和递归栈最多N层。
 
@@ -27,9 +27,9 @@ class Solution:
 
 方法二：迭代，方法一中深度优先搜索中会有重复的遍历操作。如果能够用中间变量保存子串的分割结果，就不必要重复对相同的子串进行分割了。判断回文也可以利用动态数组。省去了每次都重头进行判断字符串是否为回文。
 
-**时间复杂度**：$O(N*(2^N-1))$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。#1中for循环执行了$2^{N}-1$次。可以用数学归纳法求得，长度为0到N-1的分割方式总计有k+1种，那么长度为N就在此基础上append k+1次。+1是因为长度为0时，还要append整个字符串。即$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n)$，f(1)=1。list拼接的复杂度是$O(N)$。
+**时间复杂度**：$O(N \times (2^N-1))$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。#1中for循环执行了$2^{N}-1$次。可以用数学归纳法求得，长度为0到N-1的分割方式总计有k+1种，那么长度为N就在此基础上append k+1次。+1是因为长度为0时，还要append整个字符串。即$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n)，f(1)=1$。list拼接的复杂度是$O(N)$。
 
-**空间复杂度**：$O(N*2^{N})$。主要考虑res三维list占用的空间。考虑最差情况字符串字母都一样，比如aaaa...aaa。res[i]占用内存为$2^{i-1}*i$。那么总的内存开销就是求$\sum_{n=1}^{N}2^{n-1}*n$，结果是$N*2^N-2^N+1$。空间复杂度不会超过时间复杂度。
+**空间复杂度**：$O(N \times 2^{N})$。主要考虑res三维list占用的空间。考虑最差情况字符串字母都一样，比如aaaa...aaa。res[i]占用内存为$2^{i-1} \times i$。那么总的内存开销就是求$\sum_{n=1}^{N}2^{n-1} \times n$，结果是$N \times 2^N-2^N+1$。空间复杂度不会超过时间复杂度。
 
 ```python
 class Solution:
