modify * to \times

--- a/Leetcode/131.分割回文串.md
+++ b/Leetcode/131.分割回文串.md
@@ -4,7 +4,7 @@
 
 方法一：深度优先搜索，遍历每一种可能的情况，只有当前面的字符串为回文串时才继续往下搜索。当遍历到字符串末尾，说明前面分割的字符串都是回文串。加入res中返回。
 
-**时间复杂度**：$O(k\times N \times 2^{N-1})$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。即求这种情况下dfs访问的次数。$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n)$，f(1)=1。每个结果需要进行回文判断，list的拼接，和最终结果的拷贝。都是$O(N)$的复杂度。k可以理解为3。list拼接的时间复杂度为$O(m+n)$，m和n分别是两个list的长度。
+**时间复杂度**：$O(k\times N \times 2^{N-1})$。N是字符串长度。假设字符串长度为N，最差情况下字符串是aaaa...aaa的形式。即求这种情况下dfs访问的次数。$f(n) = \sum_{k=1}^{n-1}f(k)+1$，求$\sum_{n=1}^Nf(n), f(1)=1$。每个结果需要进行回文判断，list的拼接，和最终结果的拷贝。都是$O(N)$的复杂度。k可以理解为3。list拼接的时间复杂度为$O(m+n)$，m和n分别是两个list的长度。
 
 **空间复杂度**：$O(N)$。临时结果part占用N和递归栈最多N层。
 
