--- a/Leetcode/46.全排列.md
+++ b/Leetcode/46.全排列.md
@@ -4,7 +4,7 @@
 
 方法一：深度优先搜索，使用table记录索引是否被访问过。index达到nums长度后，根据index复制nums元素到结果中。
 
-**时间复杂度**：$O(N*N!)$。总共N！个叶子节点。
+**时间复杂度**：$O(N \times N!)$。总共N！个叶子节点。
 
 **空间复杂度**：$O(N)$。需要table数组大小为N，递归栈的深度为N，index的大小也为N。不计算返回结果占用的空间。
 
@@ -28,7 +28,7 @@ class Solution:
 
 方法二：交换法。给定包含不同元素的原始序列nums，大小为N。其能生成的所有排列最多只需要原始序列交换N次。能否通过不断地交换来生成所有的排列呢？用数学归纳法，假设permute函数可以获得一个N-1位的全排列。那么我们只需要将N个数分别与第1位进行交换，再调用permute函数生成剩下的N-1位的全排列即可。
 
-**时间复杂度**：$O(N*N!)$。总共N！个叶子节点，每个排列复制到结果中的时间复杂度为O(N)。
+**时间复杂度**：$O(N \times N!)$。总共N！个叶子节点，每个排列复制到结果中的时间复杂度为O(N)。
 
 **空间复杂度**：$O(N)$。不需要table数组，但是递归栈的深度为N，不计算返回结果占用的空间。
 
