--- a/Leetcode/79.单词搜索.md
+++ b/Leetcode/79.单词搜索.md
@@ -4,7 +4,7 @@
 
 通过直接修改board本身，可以不用使用额外空间记录字母是否被访问过。
 
-**时间复杂度**：$O(MN*3^L))$。M，N分别维board的高度和宽度。L为所需搜索单词的长度。
+**时间复杂度**：$O(MN \times 3^L))$。M，N分别维board的高度和宽度。L为所需搜索单词的长度。
 
 **空间复杂度**：使用额外数组记录当前单词是否被访问过，空间复杂度为$O(MN))$。
 
