--- a/Leetcode/Python/22.括号生成.md
+++ b/Leetcode/Python/22.括号生成.md
@@ -4,7 +4,7 @@
 
 方法一：dfs搜索所有可能的结果，搜索过程中，始终保证r <= l <= n。l和r分别代表左括号和右括号的个数。
 
-**时间复杂度**$O(\frac{4^n}{n^{1/2}})$。卡特兰数渐近为$\frac{4^n}{n^{3/2}\sqrt{\pi}}$，即配对个数为n时，有这么多结果，每个结果拷贝的时间复杂度为$O(n)$，每个结果生成path不停地拼接左右括号共计2n次，不考虑常数系数，时间复杂度就是卡特兰数乘以n。
+**时间复杂度**$O(\frac{4^n}{\sqrt{n}})$。卡特兰数渐近为$\frac{4^n}{n^{3/2}\sqrt{\pi}}$，即配对个数为n时，有这么多结果，每个结果拷贝的时间复杂度为$O(n)$，每个结果生成path不停地拼接左右括号共计2n次，不考虑常数系数，时间复杂度就是卡特兰数乘以n。
 
 **空间复杂度**：$O(n)$。递归栈的最大深度为2n，临时字符串的长度为2n。
 
@@ -61,7 +61,7 @@ class Solution:
         return dic[n]
 ```
 
-**时间复杂度**：$O(\sqrt{n}{4^n})$。卡特兰数渐近为$\frac{4^n}{n^{3/2}\sqrt{\pi}}$，时间复杂度考察append执行次数乘以字符串的拼接复杂度。其实就是求$\sum_{k=1}^n2kf(k)$，2k是字符串拼接的时间复杂度。卡特兰数$f(n) = C_{2n}^{n} - C_{2n}^{n-1}$，不方便计算，这里使用其渐进进行计算，并且不考虑常数系数，即求$\sum_{k=1}^{n}{\frac{4^k}{\sqrt{k}}}$。这个表达式我还不知道怎么求。算法复杂度给了个上限。
+**时间复杂度**：$O(\frac{4^n}{\sqrt{n}})$。卡特兰数渐近为$\frac{4^n}{n^{3/2}\sqrt{\pi}}$，时间复杂度考察append执行次数乘以字符串的拼接复杂度。其实就是求$\sum_{k=1}^n2kf(k)$，2k是字符串拼接的时间复杂度。卡特兰数$f(n) = C_{2n}^{n} - C_{2n}^{n-1}$，不方便计算，这里使用其渐进进行计算，并且不考虑常数系数，即求$\sum\limits_{k=1}^{n}{\frac{4^k}{\sqrt{k}}}$。这个我不会求，在[stackexchange](https://math.stackexchange.com/questions/4001639/sum-k-1n-frac4k-sqrtk)上问了，还是一个数量级的。
 
-**空间复杂度**：$O(\sqrt{n}{4^n})$。空间复杂度和时间复杂度一样，就是计算0到n的所有结果占用空间大小。
+**空间复杂度**：$O(\frac{4^n}{\sqrt{n}})$。空间复杂度和时间复杂度一样，就是计算0到n的所有结果占用空间大小。
 
