--- a/Leetcode/Python/134.加油站.md
+++ b/Leetcode/Python/134.加油站.md
@@ -2,7 +2,7 @@
 
 **解题思路**：
 
-直接的思路是每个起始点都遍历一遍，看是否能遍历一圈。这样的复杂度是N方。当从x出发时，到达y后停下，不能到达y+1，此时可以证明x和y之间的任意点出发，也都到达不了y+1。因为如果能到达，那么x也能到达y+1。此时可以从y+1继续开始遍历。直到到达最后一个点遍历一圈还是不行，返回-1。当遍历一圈，又达到起始点，说明可以绕一圈，此时返回起始点位置。
+直接的思路是每个起始点都遍历一遍，看是否能遍历一圈。这样的复杂度是N方。当从x出发时，到达y后停下，不能到达y+1，此时可以证明x和y之间的任意点出发，也都到达不了y+1。因为如果能到达，那么x也能到达y+1。此时可以从y+1继续开始遍历。直到到达最后一个点遍历一圈还是不行，返回-1。当遍历一圈，又达到起始点，说明可以绕一圈，此时返回起始点位置。由于之前遍历过的路程可以记录下来，所以初始点到达最后就可以停了，不用再遍历一圈回到起始点，因为从0到初始点的总和一直被更新保存。
 
 **时间复杂度**：$O(N)$。N是gas的长度。
 
@@ -12,16 +12,15 @@
 class Solution:
     def canCompleteCircuit(self, gas: List[int], cost: List[int]) -> int:
         tmp = 0
-        i = 0
-        while i < len(gas):
-            for j in range(i, i + len(gas)):
-                tmp += gas[j % len(gas)] - cost[j % len(gas)]
-                if tmp < 0:
-                    i = j + 1
-                    tmp = 0
-                    break
-            if j == i + len(gas) - 1:
-                return i  
-        return -1
+        start = 0
+        total = 0 
+        for i in range(start, len(gas)):
+            tmp += gas[i] - cost[i]
+            if tmp < 0:
+                start = i + 1
+                total += tmp
+                tmp = 0
+        total += tmp
+        return -1 if total < 0 else start
 ```
 
