--- a/Notes/Leetcode/0003.Longest Substring Without Repeating Characters.md
+++ b/Notes/Leetcode/0003.Longest Substring Without Repeating Characters.md
@@ -74,10 +74,10 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
+[0159](https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters) | Longest Substring with At Most Two Distinct Characters | Medium |  | Hash Table,String,Sliding Window | 51.2%
+[0340](https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters) | Longest Substring with At Most K Distinct Characters | Medium |  | Hash Table,String,Sliding Window | 46.2%
+[0992](https://leetcode.com/problems/subarrays-with-k-different-integers) | Subarrays with K Different Integers | Hard |  | Array,Hash Table,Sliding Window,Counting | 51.8%
+[1695](https://leetcode.com/problems/maximum-erasure-value) | Maximum Erasure Value | Medium |  | Array,Hash Table,Sliding Window | 52.3%
 ## 相关topic
 Topic | Link
 :-----:|:----:
