--- a/Notes/Leetcode/0016.3Sum Closest.md
+++ b/Notes/Leetcode/0016.3Sum Closest.md
@@ -58,8 +58,8 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0015](https://leetcode.com/problems/3sum) | 3Sum | Medium |  | Array,Two Pointers,Sorting | 29.0%
+[0259](https://leetcode.com/problems/3sum-smaller) | 3Sum Smaller | Medium |  | Array,Two Pointers,Binary Search,Sorting | 49.6%
 ## 相关topic
 Topic | Link
 :-----:|:----:
