--- a/Notes/Leetcode/0022.Generate Parentheses.md
+++ b/Notes/Leetcode/0022.Generate Parentheses.md
@@ -88,8 +88,8 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0017](https://leetcode.com/problems/letter-combinations-of-a-phone-number) | Letter Combinations of a Phone Number | Medium |  | Hash Table,String,Backtracking | 51.0%
+[0020](https://leetcode.com/problems/valid-parentheses) | Valid Parentheses | Easy |  | String,Stack | 40.3%
 ## 相关topic
 Topic | Link
 :-----:|:----:
