--- a/Notes/Leetcode/0028.Implement strStr().md
+++ b/Notes/Leetcode/0028.Implement strStr().md
@@ -106,8 +106,8 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0214](https://leetcode.com/problems/shortest-palindrome) | Shortest Palindrome | Hard |  | String,Rolling Hash,String Matching,Hash Function | 31.1%
+[0459](https://leetcode.com/problems/repeated-substring-pattern) | Repeated Substring Pattern | Easy |  | String,String Matching | 43.4%
 ## 相关topic
 Topic | Link
 :-----:|:----:
