--- a/Notes/Leetcode/0067.Add Binary.md
+++ b/Notes/Leetcode/0067.Add Binary.md
@@ -48,10 +48,10 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
+[0002](https://leetcode.com/problems/add-two-numbers) | Add Two Numbers | Medium |  | Linked List,Math,Recursion | 36.5%
+[0043](https://leetcode.com/problems/multiply-strings) | Multiply Strings | Medium |  | Math,String,Simulation | 35.7%
+[0066](https://leetcode.com/problems/plus-one) | Plus One | Easy |  | Array,Math | 42.0%
+[0989](https://leetcode.com/problems/add-to-array-form-of-integer) | Add to Array-Form of Integer | Easy |  | Array,Math | 45.1%
 ## 相关topic
 Topic | Link
 :-----:|:----:
