--- a/Notes/Leetcode/0073.Set Matrix Zeroes.md
+++ b/Notes/Leetcode/0073.Set Matrix Zeroes.md
@@ -78,7 +78,7 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
+[0289](https://leetcode.com/problems/game-of-life) | Game of Life | Medium |  | Array,Matrix,Simulation | 60.2%
 ## 相关topic
 Topic | Link
 :-----:|:----:
