--- a/Notes/Leetcode/0077.Combinations.md
+++ b/Notes/Leetcode/0077.Combinations.md
@@ -170,8 +170,8 @@ def combinations(iterable, r):
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0039](https://leetcode.com/problems/combination-sum) | Combination Sum | Medium |  | Array,Backtracking | 61.2%
+[0046](https://leetcode.com/problems/permutations) | [Permutations](./Notes/Leetcode/0046.Permutations.md) | Medium | [Python](./Codes/Leetcode/Python/0046.Permutations.md) | Array,Backtracking | 68.6%
 ## 相关topic
 Topic | Link
 :-----:|:----:
