--- a/Notes/Leetcode/0079.Word Search.md
+++ b/Notes/Leetcode/0079.Word Search.md
@@ -110,7 +110,7 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
+[0212](https://leetcode.com/problems/word-search-ii) | Word Search II | Hard |  | Array,String,Backtracking,Trie,Matrix | 37.9%
 ## 相关topic
 Topic | Link
 :-----:|:----:
