--- a/Notes/Leetcode/0113.Path Sum II.md
+++ b/Notes/Leetcode/0113.Path Sum II.md
@@ -70,10 +70,10 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
+[0112](https://leetcode.com/problems/path-sum) | [Path Sum](./Notes/Leetcode/0112.Path Sum.md) | Easy | [Python](./Codes/Leetcode/Python/0112.Path Sum.md) | Tree,Depth-First Search,Binary Tree | 43.4%
+[0257](https://leetcode.com/problems/binary-tree-paths) | Binary Tree Paths | Easy |  | String,Tree,Depth-First Search,Binary Tree | 55.5%
+[0437](https://leetcode.com/problems/path-sum-iii) | [Path Sum III](./Notes/Leetcode/0437.Path Sum III.md) | Medium | [Python](./Codes/Leetcode/Python/0437.Path Sum III.md) | Tree,Depth-First Search,Binary Tree | 48.8%
+[0666](https://leetcode.com/problems/path-sum-iv) | Path Sum IV | Medium |  | Array,Tree,Depth-First Search,Binary Tree | 57.6%
 ## 相关topic
 Topic | Link
 :-----:|:----:
