--- a/Notes/Leetcode/0125.Valid Palindrome.md
+++ b/Notes/Leetcode/0125.Valid Palindrome.md
@@ -68,8 +68,8 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0234](https://leetcode.com/problems/palindrome-linked-list) | Palindrome Linked List | Easy |  | Linked List,Two Pointers,Stack,Recursion | 43.5%
+[0680](https://leetcode.com/problems/valid-palindrome-ii) | Valid Palindrome II | Easy |  | Two Pointers,String,Greedy | 37.5%
 ## 相关topic
 Topic | Link
 :-----:|:----:
