--- a/Notes/Leetcode/0131.Palindrome Partitioning.md
+++ b/Notes/Leetcode/0131.Palindrome Partitioning.md
@@ -78,8 +78,8 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0132](https://leetcode.com/problems/palindrome-partitioning-ii) | Palindrome Partitioning II | Hard |  | String,Dynamic Programming | 31.7%
+[1745](https://leetcode.com/problems/palindrome-partitioning-iv) | Palindrome Partitioning IV | Hard |  | String,Dynamic Programming | 49.8%
 ## 相关topic
 Topic | Link
 :-----:|:----:
