--- a/Notes/Leetcode/0200.Number of Islands.md
+++ b/Notes/Leetcode/0200.Number of Islands.md
@@ -71,13 +71,13 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
-
-
-
+[0130](https://leetcode.com/problems/surrounded-regions) | Surrounded Regions | Medium |  | Array,Depth-First Search,Breadth-First Search,Union Find,Matrix | 30.8%
+[0286](https://leetcode.com/problems/walls-and-gates) | Walls and Gates | Medium |  | Array,Breadth-First Search,Matrix | 57.4%
+[0305](https://leetcode.com/problems/number-of-islands-ii) | Number of Islands II | Hard |  | Array,Union Find | 39.4%
+[0323](https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph) | Number of Connected Components in an Undirected Graph | Medium |  | Depth-First Search,Breadth-First Search,Union Find,Graph | 59.0%
+[0694](https://leetcode.com/problems/number-of-distinct-islands) | Number of Distinct Islands | Medium |  | Hash Table,Depth-First Search,Breadth-First Search,Union Find,Hash Function | 58.6%
+[0695](https://leetcode.com/problems/max-area-of-island) | Max Area of Island | Medium |  | Array,Depth-First Search,Breadth-First Search,Union Find,Matrix | 67.0%
+[1905](https://leetcode.com/problems/count-sub-islands) | Count Sub Islands | Medium |  | Array,Depth-First Search,Breadth-First Search,Union Find,Matrix | 60.8%
 ## 相关topic
 Topic | Link
 :-----:|:----:
