--- a/Notes/Leetcode/0406.Queue Reconstruction by Height.md
+++ b/Notes/Leetcode/0406.Queue Reconstruction by Height.md
@@ -59,7 +59,7 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
+[0315](https://leetcode.com/problems/count-of-smaller-numbers-after-self) | Count of Smaller Numbers After Self | Hard |  | Array,Binary Search,Divide and Conquer,Binary Indexed Tree,Segment Tree,Merge Sort,Ordered Set | 42.0%
 ## 相关topic
 Topic | Link
 :-----:|:----:
