--- a/Notes/Leetcode/0112.Path Sum.md
+++ b/Notes/Leetcode/0112.Path Sum.md
@@ -63,11 +63,11 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
-
+[0113](https://leetcode.com/problems/path-sum-ii) | [Path Sum II](./Notes/Leetcode/0113.Path Sum II.md) | Medium | [Python](./Codes/Leetcode/Python/0113.Path Sum II.md) | Backtracking,Tree,Depth-First Search,Binary Tree | 50.8%
+[0124](https://leetcode.com/problems/binary-tree-maximum-path-sum) | Binary Tree Maximum Path Sum | Hard |  | Dynamic Programming,Tree,Depth-First Search,Binary Tree | 36.3%
+[0129](https://leetcode.com/problems/sum-root-to-leaf-numbers) | Sum Root to Leaf Numbers | Medium |  | Tree,Depth-First Search,Binary Tree | 52.6%
+[0437](https://leetcode.com/problems/path-sum-iii) | [Path Sum III](./Notes/Leetcode/0437.Path Sum III.md) | Medium | [Python](./Codes/Leetcode/Python/0437.Path Sum III.md) | Tree,Depth-First Search,Binary Tree | 48.8%
+[0666](https://leetcode.com/problems/path-sum-iv) | Path Sum IV | Medium |  | Array,Tree,Depth-First Search,Binary Tree | 57.6%
 ## 相关topic
 Topic | Link
 :-----:|:----:
