--- a/Notes/Leetcode/0437.Path Sum III.md
+++ b/Notes/Leetcode/0437.Path Sum III.md
@@ -73,10 +73,10 @@ class Solution:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
-
-
+[0112](https://leetcode.com/problems/path-sum) | [Path Sum](./Notes/Leetcode/0112.Path Sum.md) | Easy | [Python](./Codes/Leetcode/Python/0112.Path Sum.md) | Tree,Depth-First Search,Binary Tree | 43.4%
+[0113](https://leetcode.com/problems/path-sum-ii) | [Path Sum II](./Notes/Leetcode/0113.Path Sum II.md) | Medium | [Python](./Codes/Leetcode/Python/0113.Path Sum II.md) | Backtracking,Tree,Depth-First Search,Binary Tree | 50.8%
+[0666](https://leetcode.com/problems/path-sum-iv) | Path Sum IV | Medium |  | Array,Tree,Depth-First Search,Binary Tree | 57.6%
+[0687](https://leetcode.com/problems/longest-univalue-path) | Longest Univalue Path | Medium |  | Tree,Depth-First Search,Binary Tree | 38.2%
 ## 相关topic
 Topic | Link
 :-----:|:----:
