--- a/Notes/Leetcode/0622.Design Circular Queue.md
+++ b/Notes/Leetcode/0622.Design Circular Queue.md
@@ -112,8 +112,8 @@ class MyCircularQueue:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-
-
+[0641](https://leetcode.com/problems/design-circular-deque) | [Design Circular Deque](./Notes/Leetcode/0641.Design Circular Deque.md) | Medium | [Python](./Codes/Leetcode/Python/0641.Design Circular Deque.md) | Array,Linked List,Design,Queue | 56.6%
+[1670](https://leetcode.com/problems/design-front-middle-back-queue) | Design Front Middle Back Queue | Medium |  | Array,Linked List,Design,Queue,Data Stream | 54.6%
 ## 相关topic
 Topic | Link
 :-----:|:----:
