--- a/Notes/Leetcode/0641.Design Circular Deque.md
+++ b/Notes/Leetcode/0641.Design Circular Deque.md
@@ -154,7 +154,7 @@ class MyCircularDeque:
 ## 相似题目
 Question id | Title | Level | Language | Topic | AcRate
 :-----------:|:-----:|:-----:|:--------:|:-----:|:------:
-[0622](https://leetcode.com/problems/design-circular-queue) | [Design Circular Queue](./Notes/Leetcode/0622.Design Circular Queue.md) | Medium | [Python](./Codes/Leetcode/Python/0622.Design Circular Queue.md) | Array,Linked List,Design,Queue | 47.9%
+[0622](https://leetcode.com/problems/design-circular-queue) | [Design Circular Queue](./Notes/Leetcode/0622.Design%20Circular%20Queue.md) | Medium | [Python](./Codes/Leetcode/Python/0622.Design%20Circular%20Queue.md) | Array,Linked List,Design,Queue | 47.9%
 [1670](https://leetcode.com/problems/design-front-middle-back-queue) | Design Front Middle Back Queue | Medium |  | Array,Linked List,Design,Queue,Data Stream | 54.6%
 ## 相关topic
 Topic | Link
